tests/error/experimental_errors/daggerable.err
Error: Experimental feature (at $FILE:13:59)
   | 
11 | 
12 | @guppy
13 | def apply_control(f: Function[[qubit], None], q: qubit) -> Daggerable[[qubit], None]:
   |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ Daggerable callable is an experimental feature

Help: Experimental features are currently disabled. You can enable them by
calling `guppylang.enable_experimental_features()`, however note that these
features are unstable and might break in the future.

Guppy compilation failed due to 1 previous error
